--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -6255,7 +6255,7 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   font-weight:bold;
   padding:0px 9px 1px 10px;
   text-decoration:none;
-  text-shadow:0px 1px 0px #333;
+  text-shadow:0px 1px 0px #3d768a;
   margin-top:-9px;
 }
 #box-currency{
@@ -6292,6 +6292,6 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   color:#FFFFFF;
   font-weight:bold;
   text-decoration:none;
-  text-shadow:0px 1px 0px #333;
-  margin-top:-9.6px;
+  text-shadow:0px 1px 0px #3d768a;
+  margin-top:-10px;
 }
