--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -6173,7 +6173,7 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
 .leftcontact{
   float:left;
   color: #fff;
-  margin-left:10%;
+  margin-left:10.5%;
   font-size:12px;
     -moz-box-shadow: 0px 10px 14px -7px #000;
   -webkit-box-shadow: 0px 10px 14px -7px #000;
@@ -6184,7 +6184,7 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   border-radius:14px;
   display:inline-block;
   cursor:pointer;
-  color:#ffffff;
+  color:#777;
   font-family:Arial;
   font-weight:bold;
   padding:0px 10px 1px 20px;
@@ -6206,7 +6206,7 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   border-radius:14px;
   display:inline-block;
   cursor:pointer;
-  color:#ffffff;
+  color:#777;
   font-family:Arial;
   font-weight:bold;
   padding:0px 10px 1px 20px;
