--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -2103,10 +2103,7 @@ meta.foundation-mq-topbar {
     .top-bar button {
       font-size: 0.875rem;
       height: 1.6rem;
-      position: relative;
-      padding-top:12px;
-      padding-bottom:12px;
-       }
+      position: relative;}
     .top-bar.expanded {
       background: crimson; }
 
@@ -6143,7 +6140,7 @@ th.hide-for-touch {
   margin-top:-0.35em;
 }
 .icon2{
-  margin-left: 36.8%;
+  margin-left:36%;
   margin-top:1em;
   margin-bottom:2em;
   float: left;
@@ -6193,44 +6190,33 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
 .leftcontact2{
   float:left;
   color: #fff;
-  margin-left:-1.5%;
-  margin-top:3.4px;
-  font-size:12px;
-    -moz-box-shadow: 0px 10px 14px -7px #000;
-  -webkit-box-shadow: 0px 10px 14px -7px #000;
-  box-shadow: 0px 10px 14px -7px #000;
+  margin-left:-3%;
+  margin-top:1px;
+  font-size:14px;
   background-color:#E7BB41;
   -moz-border-radius:14px;
   -webkit-border-radius:14px;
   border-radius:14px;
   display:inline-block;
   cursor:pointer;
-  color:#777;
+  color:#000;
   font-family:Arial;
   font-weight:bold;
-  padding:0px 10px 1px 20px;
+  padding:0px 10px 2px 23px;
   text-decoration:none;
-  text-shadow:0px 1px 0px #333;
 }
 
 #box-session2{
-  float:left;
+  float:right;
   color: #fff;
   font-size:12px;
-  -moz-box-shadow: 0px 10px 14px -7px #000;
-  -webkit-box-shadow: 0px 10px 14px -7px #000;
-  box-shadow: 5px 8px 1px 0px #000;
   background-color:#E7BB41;
-  -moz-border-radius:0px;
-  -webkit-border-radius:0px;
-  margin-top:-10px;
   border-radius:0px;
   display:inline-block;
   cursor:pointer;
   color:#FFFFFF;
   font-weight:bold;
-  padding:9px 9px 0px 10px;
-  height:50px;
+  padding:10px 3px 0px 3px;
   text-decoration:none;
   text-shadow:0px 1px 0px #333;
 }
