--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -944,7 +944,7 @@ select {
   .large-5 {
     width: 41.66667%;
     background-color:#393E41;
-    padding-bottom: 1.5% }
+    padding-bottom: 1.53% }
 
   #box-newsletter {
     background-color: #393E41;
@@ -955,7 +955,8 @@ select {
 
   .large-7 {
     width: 58.33333%; 
-    background-color:#393E41; }
+    background-color:#393E41;
+    padding-bottom:0.5em; }
 
   .large-8 {
     width: 66.66667%; }
@@ -6269,4 +6270,17 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   font-weight:bold;
   text-decoration:none;
   padding:0.45em !important;
+}
+
+#ccpower.row{
+  background:#393E41;
+}
+
+.ccpowered{
+  padding-left:1em;
+}
+.borderbot{
+  height:5px;
+  width:100%;
+  background-color:#E7BB41;
 }
