Added contact links for mobile devices.

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -6284,3 +6284,12 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   width:100%;
   background-color:#E7BB41;
 }
+.callus a{
+  color:#000;
+}
+.faxus a{
+  color:#000;
+}
+.emailus a{
+  color:#000;
+}
