Fixes white box appearing in footer due to .row background color and differing element heights

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -165,6 +165,8 @@ select {
       .row .row.collapse:after {
         clear: both; }
 
+footer > .row { background-color:inherit;}
+
 .column,
 .columns {
   padding-left: 0.9375em;
