Skin changes for live site*
* Note that the live skin is in the /skins/custom/ directory instead of the /skins/foundation directory, but it was left here in order to more easily merge changes from the CubeCart master branch.

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -58,7 +58,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: #fff url("//127.0.0.1/git/cc/skins/foundation/images/bg.gif") repeat scroll 0% 0%;
+  background: #fff url("//linemansequipment.com/skins/custom/images/bg.gif") repeat scroll 0% 0%;
   cursor: auto;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-style: normal;
