Fixes lists displaying incorrectly on product pages
Restores the left-hand and bottom margins for lists in general, and keeps them at 0 for the list used in the header.

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -3620,7 +3620,8 @@ dl {
   margin-bottom: 1.25rem; }
 
 ul {
-  margin-bottom:0%; }
+  margin-left: 1.1rem;}
+  ul.logo { margin-left: 0; margin-bottom:0;}
   ul.no-bullet {
     margin-left: 0; }
     ul.no-bullet li ul,
