Fix footer divs changing background color at different resolutions

--- a/skins/foundation/css/cubecart.css
+++ b/skins/foundation/css/cubecart.css
@@ -71,6 +71,9 @@ footer {
     background-color: #393E41;
     color: #EDFFEE;
 }
+div.footer {
+	background-color: inherit;
+}
 footer h3 {
     color: #fff;
 }
