Change color of 'Shop by Category' dropdown in narrow window mode

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -1841,7 +1841,7 @@ meta.foundation-mq-topbar {
     background: transparent;
     height: auto; }
     .top-bar.expanded .title-area {
-      background: crimson; }
+      background: #333333; }
     .top-bar.expanded .toggle-topbar a {
       color: #888888; }
       .top-bar.expanded .toggle-topbar a span::after {
