--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -129,7 +129,7 @@ select {
 .row {
   background-color: #FFFFFF;
   margin: 0 auto;
-  max-width: 66.6em;
+  max-width: 80em;
   width: 100%; }
   .row:before, .row:after {
     content: " ";
@@ -6271,4 +6271,16 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
 }
 .emailus a{
   color:#000;
+}
+a.clickable-image {
+	transition: all 200ms ease-out;
+}
+a.clickable-image:hover {
+	-moz-box-shadow: 0px 0px 4px 2px rgba(43, 166, 203, 0.5);
+	-webkit-box-shadow: 0px 0px 4px 2px rgba(43, 166, 203, 0.5);
+	box-shadow: 0px 0px 4px 2px rgba(43, 166, 203, 0.5);
+}
+#box-manufacturers a.clickable-image {
+	line-height: 34px;
+	padding: 2px 0px 7px 0px;
 }
