--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -6281,6 +6281,8 @@ a.clickable-image:hover {
 	box-shadow: 0px 0px 4px 2px rgba(43, 166, 203, 0.5);
 }
 #box-manufacturers a.clickable-image {
-	line-height: 34px;
-	padding: 2px 0px 7px 0px;
+	display: inline-block;
+	width: 120px;
+	height: 30px;
+	margin-bottom: 5px;
 }
