Re-add .marg-top CSS rule
Fixes issue with product image thumbnail margins

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -5271,7 +5271,7 @@ table {
 [class*="block-grid-"] {
   display: block;
   padding: 0;
-  margin: 3.48em -0.625rem; }
+  margin: 0 -0.625rem; }
   [class*="block-grid-"]:before, [class*="block-grid-"]:after {
     content: " ";
     display: table; }
